# den

./: .bumpversion.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: linting_and_testing.yml  publish_to_aur.yml  publish_to_pypi.yml  release.yml  release_aur.yml  release_debian.yml  release_pypi.yml
den/: cmd.py  main.py  parser.py  paths.py
den/parser/: add_note.py  den.py  edit_note.py  list_notes.py  note.py  notes_helper.py  project.py  remove_note.py  utils.py
den/utils/: paths.py
packaging/arch/: .SRCINFO  PKGBUILD  generate-data.bash  generate-pkgbuild.bash  generate_PKGBUILD.sh
packaging/debian/: changelog  control  generate-data.bash  rules
src/den/: cmd.py  config.py  main.py  paths.py
src/den/parser/: add_note.py  den.py  edit_note.py  list_notes.py  note.py  notes_helper.py  project.py  remove_note.py
src/den/utils/: colors.py  platform.py
