[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "den-python"
version = "0.1.0"
description = "Braindumping for projects made easy."
authors = [
    {name = "RaghavGohil",email = "raghavgohil2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
den = "den.main:main"