[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "den-python"
version = "0.1.0"
description = "Braindumping for projects made easy."
requires-python = ">=3.12"

dependencies = []

[project.scripts]
den = "den.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/den"]

[tool.hatch.build.targets.wheel.sources]
"den" = "src/den"