[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/den"]

[project]
name = "den-python"
version = "0.1.1"
description = "Context management for projects made easy."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "RaghavGohil", email = "raghavgohil2004@gmail.com"}
]
dependencies = []

[project.scripts]
den = "den.main:main"

[project.urls]
Homepage = "https://github.com/RaghavGohil/den"
Repository = "https://github.com/RaghavGohil/den"
Issues = "https://github.com/RaghavGohil/den/issues"

[dependency-groups]
dev = []
